--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-  {
+{
   "name": "l3-password-validator-application",
   "version": "1.0.0",
   "description": "A feed application using password validation library",
@@ -9,17 +9,20 @@
     "type": "git",
     "url": "git+https://github.com/Hoohaaw/Lab_3.git"
   },
- 
   "devDependencies": {
     "eslint": "^9.35.0",
     "jest": "^30.1.3"
   },
   "dependencies": {
+    "express": "^5.1.0",
+    "express-ejs-layouts": "^2.5.1",
+    "mongoose": "^8.19.1",
+    "password-validator-ap": "^1.1.0"
   },
   "scripts": {
-  "test": "set NODE_OPTIONS=--experimental-vm-modules && jest",
-  "start": "node password-validator/src/test.js",
-  "coverage": "set NODE_OPTIONS=--experimental-vm-modules && jest --coverage"
+    "test": "set NODE_OPTIONS=--experimental-vm-modules && jest",
+    "start": "node password-validator/src/test.js",
+    "coverage": "set NODE_OPTIONS=--experimental-vm-modules && jest --coverage"
   },
   "type": "module"
-  }
+}
