Add dotenv dependency

--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "jest": "^30.1.3"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.1",
     "password-validator-ap": "^1.1.0"
   },
   "scripts": {
     "test": "set NODE_OPTIONS=--experimental-vm-modules && jest",
-    "start": "node password-validator/src/test.js",
+    "start": "node -r dotenv/config src/app.js",
     "coverage": "set NODE_OPTIONS=--experimental-vm-modules && jest --coverage"
+    
   },
   "type": "module"
 }
