--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jest": "^30.1.3"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
